nlw/share/skin/s3/css/screen.css
/* ... */
body#dashBoard #st-editing-tools-edit span.help,
body#dashBoard #st-editing-tools-edit span.prefix {
    font-size: 100%;
    top: -9px;
}

#createGroupButtons {
    height: 30px;
    width: 98%;
    padding-top: 10px;
    text-align: right;
}

#createGroupButtons .spinner {
    margin-right: 70px;
    margin-top: 6px;
}

.red_error { color: #e22 }

/*
 * Dropdowns
 */
ul#network-list, ul#signal_network-list {
    width: 150px;
}

ul.dropdownOptions {
    position: absolute;
    display: none;
    z-index: 300;
    display: block;
    background-color: #FFF;
    padding: 0;
    margin: 0;
    text-align: left;
    width: 100px;
    border: 1px solid black;
    border-top: none;
}
ul.dropdownOptions li {
    display: block;
    list-style: none;
    margin: 0;
    padding: 3px;
    border-top: 1px solid black;
    overflow: hidden;
}

ul.dropdownOptions a {
    color: #0E93D8;
    white-space: nowrap;

    /* Styles that are inherited in widgets: */
    font-size: 11px;
    font-family: arial, helvetica, sans-serif;
}

/* Hovered option */
ul.dropdownOptions li:hover, ul.dropdownOptions li.hover {
    background-color: #F4F0CB;
}
ul.dropdownOptions li:hover a, ul.dropdownOptions li.hover a {
    text-decoration: underline;
}

/* Selected option */
ul.dropdownOptions li.selected {
    background-color: #F4F0CB;
}

/* Disabled option */
ul.dropdownOptions li.disabled {
    background-color: #FFF;
}

/* Disabled option's link */
ul.dropdownOptions li.disabled a {
    color: #CCC;
    cursor: default;
    text-decoration: none;
}

ul.dropdownOptions li.disabled a:hover {
    text-decoration: none;
}

/* Activities widget popups */
.attachmentPopup, .weblinkPopup, .wikilinkPopup {
    position: absolute;
    background-color: #fff;
    z-index: 1000;
    margin: 1px 5% 0px 5%;
    padding: 5px;
    text-align: left;
    border: 1px solid black;
}

.attachmentPopup a.btn, .weblinkPopup a.btn, .wikilinkPopup a.btn {
    text-decoration: none;
    color: #000;
    background-color: #EEE;
    padding: 3px 6px;
    border-width: 1px;
    border-style: solid;
    border-color: #666 #444 #444 #666;
}
.attachmentPopup a.btn:hover,
.weblinkPopup a.btn:hover,
.wikilinkPopup a.btn:hover {
    background: #EEEECC;
}

.weblinkPopup, .wikilinkPopup {
    width: 70%;
    left: 60;
}

* html .weblinkPopup,
* html .wikilinkPopup {
    width: 100%;
}

.attachmentPopup {
    width: 90%;
    left: 0;
}

.attachmentPopup .hint {
    font-style: italic;
}
.attachmentPopup .list {
    background-color: #fff;
}
.attachmentPopup .loader {
    float: right;
}

.weblinkPopup .input,
.wikilinkPopup .input {
    margin: 5px 0px;
    text-align: right;
}

.weblinkPopup input,
.wikilinkPopup input {
    width: 40%;
}

.wikilinkPopup .buttons,
.weblinkPopup .buttons {
    padding: 3px;
    height: 22px;
    text-align: right;
}

* html .wikilinkPopup .buttons,
* html .weblinkPopup .buttons {
    top: 18px;
    padding: 6px;
}

.attachmentPopup .done {
    float: right;
    padding: 5px 3px;
    margin-left: 5px;
}
.attachmentPopup .message, .attachmentPopup .error {
    display: none;
}

